--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width">
   <title>My Favorites</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <!-- Internal Styling -->
   <style>
     h1 {
       background-color: green;
@@ -17,9 +18,11 @@
 </head>
 
 <body>
-
+<!-- Inline Styling 
+  to change an html from block to inline
+  display: inline;-->
   <header style="background-color: rgb(230,129, 30);">
-    <h1 >My Favorite Things </h1>
+    <h1 style="font-family: cursive; " >My Favorite Things </h1>
     <a href="https://www.google.com/"> Google </a>
     <!-- Horizontal rule -->
     <hr />
